# fishy_redux

./: Cargo.toml  README.md  build.rs  index.html  script.js  styles.css
.cargo/: config.toml
src/: alpha_masks.rs  assets.rs  constants.rs  main.rs  states.rs  theme.rs
src/components/: background.rs  creatures.rs  fish_picker.rs  flora.rs  game_over.rs  main_menu.rs  mod.rs  pause_menu.rs  theme_picker.rs
src/systems/: in_game.rs  main_menu.rs  mod.rs  theme_picker.rs
wasm_out/: fishy_redux.js
